# nfl

./: .env.docker  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: basic_template.md
.github/workflows/: pr-ci.yml
data/: .gitignore
data/parquet/: player_play.parquet  plays.parquet  tracking_week_1.parquet  tracking_week_2.parquet  tracking_week_3.parquet  tracking_week_6.parquet  tracking_week_7.parquet
data/parquet/2021/: README.md  games.parquet  pffScoutingData.parquet  players.parquet  plays.parquet  tracking_week_1.parquet  tracking_week_2.parquet  tracking_week_3.parquet  tracking_week_4.parquet  tracking_week_5.parquet  tracking_week_6.parquet  tracking_week_7.parquet  tracking_week_8.parquet
data/parquet/2022/: games.parquet  players.parquet  tracking_week_4.parquet  tracking_week_5.parquet  tracking_week_8.parquet  tracking_week_9.parquet
data/training/: best_model.pth  best_model_params.json  model_params.json  transformer.pt
notebooks/: creating_dataloaders.ipynb  eda.ipynb  extra_data_eda.ipynb  predictions.ipynb  train_lstm.ipynb  training.ipynb
src/: __init__.py  clean_data.py  create_features.py  driver.py  explore_data.py  generate_predictions.py  load_data.py  process_predictions.py  train_lstm.py  train_transformer.py
src/common/: __init__.py  args.py  csv_to_parquet.py  data_loader.py  decorators.py  draw_play_driver.py  mlflow.py  paths.py
src/common/models/: knn.py  mlp.py  models.py  svc.py  xgb.py
src/coverage/: coverage_lstm.ipynb  eda.ipynb  process_coverage.py  proto_lstm.ipynb  train_coverage.py
src/data_processing/: draw_play.py
src/models/: __init__.py  critical_down_yardage.py  identify_general_coverage.py  knn.py  lgb.py  log.py  lstm.py  mlp.py  models.py  process.py  rfr.py  svc.py  transformer.py  xgb.py
src/old/: README_data.md  train_lstm.py  train_xgb.py
src/processing/: draw_play.py  process.py
src/utility/: csv_to_parquet.py  decorators.py  mlflow.py
src/viz/: animate_play.py  draw_play_driver.py
